--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,12 +50,13 @@ jobs:
         run: |
           tar -zxvf $HOME/sqliteautoconf3390400_0.1.1_linux_armv6.tar.gz -C $HOME
           cd $HOME/sqliteautoconf3390400_0.1.1_linux_armv6/
-          cp -r sql/ $HOME/anki-sync-server-rs/
+          cp -r sql/ $HOME
 
       # build static-linked binary for armv6 (also suitable for aarch64)
       - name: Build 
         run: | 
           export PATH="$HOME/arm-linux-musleabihf-cross/bin:$PATH"
+	cp -r $HOME/sql .
           cargo build --target arm-unknown-linux-musleabihf --release 
   
       - name: Strip binaries (ds)
