--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-
+anki = {path="anki/rslib"}
 
 [target.x86_64-pc-windows-msvc.dependencies]
 rusqlite = {version = "0.28.0",features = ["bundled"]}
@@ -30,5 +30,5 @@ rusqlite = {version = "0.28.0",features = ["bundled"]}
 
 #use cross-compiled static sqlite3 library
 [target.arm-unknown-linux-musleabihf.dependencies]
-#rusqlite = "0.28.0"
-rusqlite = {version = "0.28.0",features = ["bundled"]}
+rusqlite = "0.28.0"
+#rusqlite = {version = "0.28.0",features = ["bundled"]}
