--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,23 @@ jobs:
           curl -LO $PB_REL/download/v3.15.8/protoc-3.15.8-linux-x86_64.zip
           mkdir -p $HOME/protoc
           unzip protoc-3.15.8-linux-x86_64.zip -d $HOME/protoc
-          
+
       - name: Add cargo taget armv6
         run: rustup target add arm-unknown-linux-musleabihf
+
+      # openssl
+      - uses: robinraju/release-downloader@v1.4
+        with:
+          repository: "dobefore/cross-compile-openssl-musl"
+          tag: "1.1.1"
+          fileName: "openssl1.1.1f_1.1.1_linux_armv6.tar.gz"
+      - name: Copy openssl lib to home
+        run: cp openssl1.1.1f_1.1.1_linux_armv6.tar.gz $HOME
+
+      - name: unpack  openssl 
+        run: |
+          tar -zxvf $HOME/openssl1.1.1f_1.1.1_linux_armv6.tar.gz -C $HOME
+          cp -r $HOME/openssl1.1.1f_1.1.1_linux_armv6/openssl/ $HOME
 
       - uses: robinraju/release-downloader@v1.4
         with:
@@ -66,6 +80,12 @@ jobs:
       # build static-linked binary for armv6 (also suitable for aarch64)
       - name: Build 
         run: | 
+          export PATH="$PATH:$HOME/protoc/bin"
+          
+          export OPENSSL_LIB_DIR=$HOME/openssl/lib
+          export OPENSSL_INCLUDE_DIR=$HOME/openssl/include
+          export OPENSSL_STATIC=true
+          
           export PATH="$HOME/arm-linux-musleabihf-cross/bin:$PATH"
           cp -r $HOME/sql .
           cargo build --target arm-unknown-linux-musleabihf --release 
